--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dog Petstore</title>
+    <title>Dogstore</title>
   </head>
   <body>
-    <h1>Dog Petstore</h1>
+    <h1>Dogstore</h1>
+    
+    <form id="upload-form">
+      <h2>Upload a dog</h2>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
+      <br>
+      <label for="breed">Breed:</label>
+      <input type="text" id="breed" name="breed" required>
+      <br>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+      <br>
+      <button type="submit">Submit</button>
+    </form>
+
+    <hr>
+
+    <h2>Search for a dog breed:</h2>
+    <input type="text" id="search-input">
+    <button id="search-button">Search</button>
     <div id="dogs"></div>
 
     <script src="index.js"></script>
