--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Dogstore</title>
+    <a href="./assets/css/style.css"></a>
   </head>
   <body>
     <h1>Dogstore</h1>
