--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dogstore</title>
-    <a href="./assets/css/style.css"></a>
+    <title>DogHub
+    </title>
+    <link rel="stylesheet" href="./assets/css/style.css"
   </head>
   <body>
-    <h1>Dogstore</h1>
+    <h1>DogHub</h1>
     
     <form id="upload-form">
       <h2>Upload a dog</h2>
