--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
     <button id="search-button">Search</button>
     <div id="dogs"></div>
 
-    <script src="index.js"></script>
+    <script src="/assets/js/index.js"></script>
   </body>
 </html>
