--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     </form>
 
     <hr>
+    <section>
+
 
     <h2>Search for a dog breed:</h2>
     <input type="text" id="search-input">
@@ -30,5 +32,6 @@
     <div id="dogs"></div>
 
     <script src="/assets/js/index.js"></script>
+</section>
   </body>
 </html>
