--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <title>DogHub
     </title>
     <link rel="stylesheet" href="./assets/css/style.css"
-  </head>
+   </head>
   <body>
     <h1>DogHub</h1>
+
+    <section id="upload-section">
     
     <form id="upload-form">
       <h2>Upload a dog</h2>
@@ -22,16 +24,19 @@
       <button type="submit">Submit</button>
     </form>
 
+     </section>
+
     <hr>
-    <section>
-
-
+    <section id="search-section">
+   
     <h2>Search for a dog breed:</h2>
     <input type="text" id="search-input">
     <button id="search-button">Search</button>
     <div id="dogs"></div>
 
     <script src="/assets/js/index.js"></script>
+
 </section>
+
   </body>
 </html>
