--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>DogHub</h1>
 
-    <section id="upload-section">
+   
     
     <form id="upload-form">
       <h2>Upload a dog</h2>
@@ -18,13 +18,16 @@
       <label for="breed">Breed:</label>
       <input type="text" id="breed" name="breed" required>
       <br>
+      <label for="image">Image</label>
+      <input type="image" id="image" name="image" required>
+      <br>
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" required>
       <br>
       <button type="submit">Submit</button>
     </form>
 
-     </section>
+     
 
     <hr>
     <section id="search-section">
