--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <label for="breed">Breed:</label>
       <input type="text" id="breed" name="breed" required>
       <br>
-      <label for="image">Image</label>
+      <label for="image">Image:</label>
       <input type="image" id="image" name="image" required>
       <br>
       <label for="email">Email:</label>
