--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
     <script src="/assets/js/index.js"></script>
 
 </section>
+<!-- Navigation bar -->
+<nav>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Breeds</a></li>
+    <li><a href="#">Upload</a></li>
+  </ul>
+</nav>
+
+
 
   </body>
 </html>
